--- a/src/app/pages/metadata/metadata.component.scss
+++ b/src/app/pages/metadata/metadata.component.scss
@@ -11,7 +11,7 @@
   }
   
   .step:hover {
-    background-color: #ff7f00;
+    background-color: rgb(13, 110, 253);
     color: white;
     transform: translateY(-5px);
   }
@@ -23,7 +23,7 @@
   
   .step p {
     font-size: 1rem;
-    color: #666;
+    color: #171717;
   }
   
   .step:hover h3 {
