--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,3 +74,5 @@
   .bd-mode-toggle .dropdown-menu .active .bi {
     display: block !important;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
