--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -58,12 +58,14 @@ Home page to present the TRE from BioData
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+        <!-- <img src="/src/assets/img/tre_home_image.jpg" alt="Description" width="100%" height="100%" style="object-fit: cover;"> -->
+         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <h1>Trusted Research Environment</h1>
+            <p class="opacity-75">
+              A Trusted Research Environment (TRE) is a secure and controlled environment for researchers to analyse sensitive data.
+            </p>
           </div>
         </div>
       </div>
@@ -174,8 +176,8 @@ Home page to present the TRE from BioData
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Five Safes Framework<span class="text-body-secondary">From UK Data Service</span></h2>
+        <p class="lead">This TRE follows the five safes framework to ensure access to confidential and sensitive data, by the researchers, in a secure and responsible way. </p>
       </div>
       <div class="col-md-5">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
