--- a/src/app/pages/project-display/project-details/project-form/project-form.component.html
+++ b/src/app/pages/project-display/project-details/project-form/project-form.component.html
@@ -33,6 +33,16 @@
       </mat-form-field>
     </div>
 
+      <!-- PII -->
+      <div class="mb-3">
+        <mat-form-field class="w-100">
+          <mat-label>Responsable (email)</mat-label>
+          <input matInput formControlName="organization"  required>
+          <mat-icon matSuffix>person</mat-icon>
+          <mat-error *ngIf="isInvalid('organization')">Responsable is required.</mat-error>
+        </mat-form-field>
+      </div>
+
     <!-- Deadline -->
     <div class="mb-3">
       <mat-form-field class="w-100">
@@ -47,15 +57,15 @@
     <div class="mb-3">
       <mat-icon class="me-2">storage</mat-icon> Data Storage Option:
       <div class="form-check">
-        <input class="form-check-input" type="radio" id="1" value="{{true}}" formControlName="internal_storage">
-        <label class="form-check-label" for="{{true}}">
+        <input class="form-check-input" type="radio" id="1" [value]="true" [(ngModel)]="this.project.internal_storage" formControlName="internal_storage">
+        <label class="form-check-label" for="1">
           Use TRE Database (Submit Data)
         </label>
         <small class="text-muted d-block">Your project will store and process data within our system.</small>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="radio" id="0" value="{{false}}" formControlName="internal_storage">
-        <label class="form-check-label" for="{{false}}">
+        <input class="form-check-input" type="radio" id="0" [value]="false" [(ngModel)]="this.project.internal_storage" formControlName="internal_storage">
+        <label class="form-check-label" for="0">
           Keep Data Externally
         </label>
         <small class="text-muted d-block">You will manage the data independently and only provide metadata.</small>
@@ -110,6 +120,12 @@
       <div class="mb-3">
         <strong><mat-icon class="me-2">business</mat-icon> Organization:</strong>
         <p class="form-control-plaintext">{{ project.organization || 'N/A' }}</p>
+      </div>
+
+      <!-- Responsable -->
+      <div class="mb-3">
+        <strong><mat-icon class="me-2">person</mat-icon> Responsable:</strong>
+        <p class="form-control-plaintext">{{ project.responsable || 'N/A' }}</p>
       </div>
 
       <!-- Deadline -->
@@ -169,6 +185,12 @@
         <p class="form-control-plaintext">{{ project.organization || 'N/A' }}</p>
       </div>
 
+      <!-- Responsable -->
+      <div class="mb-3">
+        <strong><mat-icon class="me-2">person</mat-icon> Responsable:</strong>
+        <p class="form-control-plaintext">{{ project.responsable || 'N/A' }}</p>
+      </div>
+
       <!-- Deadline -->
       <div class="mb-3">
         <strong><mat-icon class="me-2">event</mat-icon> Deadline:</strong>
@@ -194,7 +216,7 @@
   </div>
 
   <!-- Confirmation Modal -->
-  <div *ngIf="showDeleteModal" class="modal fade show d-block" tabindex="-1">
+<!--   <div *ngIf="showDeleteModal" class="modal fade show d-block" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header bg-danger text-white">
@@ -212,5 +234,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
