--- a/src/app/pages/project-display/project-display.component.html
+++ b/src/app/pages/project-display/project-display.component.html
@@ -5,7 +5,7 @@
             <h1>My Projects</h1>
         </div>
         <div class="col-md-12">
-            <a routerLink="/project/new" class="btn btn-primary">Create New Project</a>
+            <a class="btn btn-primary" (click)="createProject()">Create New Project</a>
         </div>
     </div>
   </div>
